messaging_app/blue_deployment.yaml
apiVersion: apps/v-1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
      - name: django-messaging-container
        image: your-dockerhub-username/django-messaging-app:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
