messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: django
    version: blue  # Later change this to green
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
