messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: yourdomain.com            
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service  # Your Django service name
            port:
              number: 8000
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service  
            port:
              number: 8000
